# Kitehcoin-core

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: 00-install-deps.sh  05-binary-checks.sh  06-package.sh
.github/workflows/: build-kiteh.yml  ci.yml  codeql-analysis.yml
build-aux/m4/: bitcoin_qt.m4  kitehcoin_find_bdb53.m4
contrib/: README.md  gitian-build.sh  install_db5.sh  kitehcoind.bash-completion
contrib/debian/: README.md  control  kitehcoin-qt.desktop  kitehcoin-qt.install  kitehcoin-qt.lintian-overrides  kitehcoin-qt.manpages  kitehcoin-qt.protocol  kitehcoin-tx.bash-completion  kitehcoin-tx.install  kitehcoin-tx.manpages  kitehcoind.bash-completion  kitehcoind.examples  kitehcoind.install  kitehcoind.lintian-overrides  kitehcoind.manpages  rules  watch
contrib/debian/examples/: kitehcoin.conf
contrib/devtools/: gen-manpages.sh  security-check.py  symbol-check.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  kitehcoind.conf  kitehcoind.init  kitehcoind.local.service  kitehcoind.openrc  kitehcoind.openrcconf  kitehcoind.opt.service  kitehcoind.service  org.kitehcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: bitcoin.spec
contrib/seeds/: generate-seeds.py
contrib/snap/: snapcraft.yaml
contrib/snap/local/: README.md
contrib/verify-commits/: pre-push-hook.sh
depends/: funcs.mk
doc/: Building-Dogecoin-1.14-for-Mac.md  Doxyfile  FAQ.md  FAQ_DE.md  README.md  README_osx.md  README_windows.txt  README_windows_DE.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-archlinux.md  build-macos.md  build-nixos.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  experiments.md  fee-recommendation.md  fee-recommendation_DE.md  files.md  fuzzing.md  getting-started.md  gitian-building.md  init.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Makefile.am  kitehcoin-cli.1  kitehcoin-qt.1  kitehcoin-tx.1  kitehcoind.1
qa/: README.md
qa/rpc-tests/: bumpfee.py  fundrawtransaction.py  getauxblock.py  getcoincount.py  maxblocksinflight.py  multi_rpc.py  p2p-acceptblock.py  p2p-fullblocktest.py  p2p-policy.py
qa/rpc-tests/test_framework/: authproxy.py  blocktools.py  mininode.py  test_framework.py  util.py
share/: setup.nsi.in
share/pixmaps/: kitehcoin128.xpm  kitehcoin16.xpm  kitehcoin256.xpm  kitehcoin32.xpm  kitehcoin64.xpm
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  auxpow.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  key.cpp  kitehcoin-fees.cpp  kitehcoin-fees.h  kitehcoin.cpp  kitehcoin.h  miner.cpp  net.cpp  net_processing.cpp  pow.cpp  util.cpp  util.h  validation.cpp  validation.h
src/consensus/: params.h
src/policy/: policy.h
src/primitives/: pureheader.h  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  openuridialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  sendcoinsdialog.cpp  utilitydialog.cpp
src/qt/forms/: intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  (+42 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: kitehcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  server.cpp
src/support/: experimental.h
src/test/: auxpow_tests.cpp  kitehcoin_tests.cpp  miner_tests.cpp  pow_tests.cpp  transaction_tests.cpp
src/test/data/: bitcoin-util-test.json
src/wallet/: coincontrol.h  rpcdump.cpp  rpcutil.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: wallet_tests.cpp
